--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>AngularProject</title>
+  <meta
+      name="description"
+      content="Premier projet angular, formation CEF"
+    />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="favicon.png" type="image/png" />
+
 </head>
 <body>
   <app-root></app-root>
