Déploiement complet du projet Angular

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,12 @@
       content="Premier projet angular, formation CEF"
     />
   <base href="/">
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" type="image/png" href="assets/img/favicon.png"  />
 
 </head>
 <body>
